@@ -1,9 +1,10 @@
 #source: ../../../binutils/testsuite/binutils-all/group.s
 #ld: -r
 #readelf: -Sg --wide
-#xfail: cr16-*-* crx-*-*
+#xfail: cr16-*-* crx-*-* xstormy*-*-*
 # cr16 and crx use non-standard scripts with memory regions, which don't play
 # well with unique group sections under ld -r.
+# xstormy also uses a non-standard script, putting .data before .text.
 
 #...
   \[[ 0-9]+\] foo_group[ \t]+GROUP[ \t]+.*
