@@ -28,6 +28,18 @@ if ![is_elf_format] {
     return
 }
 
+# Targets using the generic linker backend don't sort section symbols
+# before local symbols, so don't bother testing them.
+if { [istarget "arc-*-*"]
+     || [istarget "d30v-*-*"]
+     || [istarget "dlx-*-*"]
+     || [istarget "i960-*-*"]
+     || [istarget "or32-*-*"]
+     || [istarget "pj*-*-*"]
+     || [istarget "m32r-*-*"] } {
+    return
+}
+
 # Test >64k sections, with and without -r.  First, create the assembly
 # files.  Have a relocation to another section and one within the local
 # section.
@@ -111,7 +123,7 @@ if [catch { set ofd [open "tmpdir/$test1.d" w] } x] {
 # The m32r target generates both REL and RELA relocs (for historical
 # reasons) so the expected number of sections will be much more than
 # 68000, which throws this particular test right off.
-if {![istarget "m32r-*-*"]} then {
+if { ![istarget "m32r-*-*"] } then {
     foreach sfile [lrange $sfiles 0 [expr [llength $sfiles] / 2]] {
 	puts $ofd "#source: $sfile"
     }
@@ -128,7 +140,7 @@ if {![istarget "m32r-*-*"]} then {
     puts $ofd "#..."
     puts $ofd " 340..: 0+\[ \]+0\[ \]+SECTION\[ \]+LOCAL\[ \]+DEFAULT\[ \]+68... "
     puts $ofd "#..."
-    puts $ofd " 340..: 0+(2|4|8)\[ \]+0\[ \]+NOTYPE\[ \]+LOCAL\[ \]+DEFAULT\[ \]+\[23\] bar_1$"
+    puts $ofd " 340..: 0+(2|4|8)\[ \]+0\[ \]+NOTYPE\[ \]+LOCAL\[ \]+DEFAULT\[ \]+\[2-5\] bar_1$"
     puts $ofd "#..."
     puts $ofd ".* bar_34000$"
     puts $ofd "#..."
@@ -148,35 +160,46 @@ if [catch { set ofd [open "tmpdir/$test2.d" w] } x] {
     unresolved $test2
     return
 }
-foreach sfile $sfiles { puts $ofd "#source: $sfile" }
-if { [istarget spu*-*-*] } {
-    puts $ofd "#ld: --local-store 0:0"
-} else {
-    puts $ofd "#ld:"
+
+# too big for d10v and msp
+# lack of fancy orphan section handling causes overlap on fr30 and iq2000
+if { ![istarget "d10v-*-*"]
+     && ![istarget "msp*-*-*"]
+     && ![istarget "fr30-*-*"] 
+     && ![istarget "iq2000-*-*"] } {
+    foreach sfile $sfiles { puts $ofd "#source: $sfile" }
+    if { [istarget "avr-*-*"] } then {
+	puts $ofd "#as: -mmcu=avr6"
+	puts $ofd "#ld: -mavr6"
+    } elseif { [istarget spu*-*-*] } {
+	puts $ofd "#ld: --local-store 0:0"
+    } else {
+	puts $ofd "#ld:"
+    }
+    puts $ofd "#readelf: -W -Ss"
+    puts $ofd "There are 660.. section headers.*:"
+    puts $ofd "#..."
+    puts $ofd "  \\\[ 0\\\] .* 660..\[ \]+0\[ \]+0"
+    puts $ofd "#..."
+    puts $ofd "  \\\[65279\\\] \\.foo\\.\[0-9\]+ .*"
+    puts $ofd "  \\\[65280\\\] \\.foo\\.\[0-9\]+ .*"
+    puts $ofd "#..."
+    puts $ofd " 660..: \[0-9a-f\]+\[ \]+0\[ \]+SECTION\[ \]+LOCAL\[ \]+DEFAULT\[ \]+660.. "
+    puts $ofd "#..."
+    puts $ofd " 660..: \[0-9a-f\]+\[ \]+0\[ \]+NOTYPE\[ \]+LOCAL\[ \]+DEFAULT\[ \]+\[0-9\] bar_1$"
+    puts $ofd "#..."
+    puts $ofd ".* bar_66000$"
+    puts $ofd "#..."
+    # Global symbols are not in "alphanumeric" order, so we just check
+    # that the first and the last are present in any order (assuming no
+    # duplicates).
+    puts $ofd ".* (\[0-9\] foo_1|66... foo_66000)$"
+    puts $ofd "#..."
+    puts $ofd ".* (\[0-9\] foo_1|66... foo_66000)$"
+    puts $ofd "#pass"
+    close $ofd
+    run_dump_test "tmpdir/$test2"
 }
-puts $ofd "#readelf: -W -Ss"
-puts $ofd "There are 660.. section headers.*:"
-puts $ofd "#..."
-puts $ofd "  \\\[ 0\\\] .* 660..\[ \]+0\[ \]+0"
-puts $ofd "#..."
-puts $ofd "  \\\[65279\\\] \\.foo\\.\[0-9\]+ .*"
-puts $ofd "  \\\[65280\\\] \\.foo\\.\[0-9\]+ .*"
-puts $ofd "#..."
-puts $ofd " 660..: \[0-9a-f\]+\[ \]+0\[ \]+SECTION\[ \]+LOCAL\[ \]+DEFAULT\[ \]+660.. "
-puts $ofd "#..."
-puts $ofd " 660..: \[0-9a-f\]+\[ \]+0\[ \]+NOTYPE\[ \]+LOCAL\[ \]+DEFAULT\[ \]+\[0-9\] bar_1$"
-puts $ofd "#..."
-puts $ofd ".* bar_66000$"
-puts $ofd "#..."
-# Global symbols are not in "alphanumeric" order, so we just check
-# that the first and the last are present in any order (assuming no
-# duplicates).
-puts $ofd ".* (\[0-9\] foo_1|66... foo_66000)$"
-puts $ofd "#..."
-puts $ofd ".* (\[0-9\] foo_1|66... foo_66000)$"
-puts $ofd "#pass"
-close $ofd
-run_dump_test "tmpdir/$test2"
 
 for { set i 1 } { $i < $max_sec / $secs_per_file } { incr i } {
     catch "exec rm -f tmpdir/dump$i.o" status
